Code cleanup, new macro img, polish localized messages, etc.